Solucion de sesiones completa en Juridico
Es posible navergar sin problemas entre las pantallas(Solo area Juridico y Admin)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DIF"
         android:usesCleartextTraffic="true">
-        <activity android:name=".areajuridicaseguimiento"></activity>
+        <activity android:name=".vercasos"></activity>
+        <activity android:name=".areajuridicaseguimiento" />
         <activity android:name=".mostrarbene_secre" />
         <activity android:name=".areajuridica_secre" />
         <activity android:name=".General_Dir" />
