Todas las Pantallas Restantes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DIF"
         android:usesCleartextTraffic="true">
-        <activity android:name=".vercasos"></activity>
+        <activity android:name=".canalizar_area_trabajosocial"></activity>
+        <activity android:name=".canalizar_area_psicologica" />
+        <activity android:name=".canalizar_area_medica" />
+        <activity android:name=".vercasos_area_trabajosocial" />
+        <activity android:name=".vercasos_area_psicologia" />
+        <activity android:name=".vercasos_area_medica" />
+        <activity android:name=".addcase_area_psicologica" />
+        <activity android:name=".addcase_area_trabajosocial" />
+        <activity android:name=".addcase_area_medica" />
+        <activity android:name=".info_area_trabajosocial" />
+        <activity android:name=".info_area_psicologica" />
+        <activity android:name=".info_area_medica" />
+        <activity android:name=".seguimiento_psicologia" />
+        <activity android:name=".seguimiento_trabajosocial" />
+        <activity android:name=".seguimiento_area_medica" />
+        <activity android:name=".registro_trabajo_social" />
+        <activity android:name=".registro_area_psicologica" />
+        <activity android:name=".registro_area_medica" />
+        <activity android:name=".area_psicologia" />
+        <activity android:name=".area_trabajosocial" />
+        <activity android:name=".area_medica" />
+        <activity android:name=".vercasos" />
         <activity android:name=".areajuridicaseguimiento" />
         <activity android:name=".mostrarbene_secre" />
         <activity android:name=".areajuridica_secre" />
